# src/dto/bookCollection.dto.ts
@@ -1,8 +1,6 @@
-import { BookDTO } from "./book.dto";
-
 export interface BookCollectionDTO {
     id?: number;
     book_id: number;
-    avaible:boolean;
-    state:number;
+    available: boolean;
+    state: string;
 }
